@@ -1,3 +1,9 @@
+2004-04-01  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
+
+	* lib/flresource.c (fl_get_resource): when a resource is a
+	FL_STRING, avoid doing a strncpy of a string over itself (triggers
+	a valgrind report)
+
 2004-03-30  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
 
 	* README: mention the --enable-demos and --disable-gl flags, which
